--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dark-mode-toggle": "^0.0.10",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
