--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dark-mode-toggle": "^0.0.10",
     "react-datepicker": "^3.4.1",
