--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@xstate/react": "^1.2.2",
+    "classnames": "^2.2.6",
     "framer-motion": "^3.2.2-rc.1",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
