--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dark-mode-toggle": "^0.0.10",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
+    "react-flatpickr": "^3.10.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
